Fixed scrolling on mobiles

--- a/stylesheets/medias.css
+++ b/stylesheets/medias.css
@@ -35,6 +35,12 @@
     }
 }
 
+@media screen and (max-height: 900px) {
+    body{
+        overflow-y: auto;
+    }
+}
+
 @media screen and (max-width: 850px) {
     .definitions {
         font-size: 14px;
