--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -41,11 +41,11 @@ body {
 .container a:before {
     position: absolute;
     cursor: pointer;
-    padding: 10px;
-    left: -10px;
-    top: -10px;
-    width: 100%;
-    height: 100%;
+    padding: 10px 20px;
+    left: 0;
+    top: 0;
+    width: calc(100% - 40px);
+    height: calc(100% - 20px);
     border-radius: 20px;
     backdrop-filter: blur(1px);
     text-align: justify;
